--- a/pages/project1.html
+++ b/pages/project1.html
@@ -22,11 +22,11 @@
 
     <link rel="preload" href="https://res.cloudinary.com/dnptzisuf/image/upload/f_auto,q_auto,c_fill,w_auto,dpr_auto,fl_lossy,fl_force_strip/v1747014136/girlCoding-mobile_ggxuht.avif" as="image" type="image/avif" media="(max-width: 480px)">
 
-    <link rel="preload" href="https://res.cloudinary.com/dnptzisuf/image/upload/fl_progressive,f_auto,q_auto,c_fill,w_auto,dpr_auto,fl_lossy,fl_force_strip/v1747049366/welcome_to_tech_trends_desktop_kd0jdv.avif" as="image" type="image/avif" media="(min-width: 1200px)">
+    <link rel="preload" href="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,c_fill,w_auto,dpr_auto,fl_lossy,fl_force_strip/v1747049366/welcome_to_tech_trends_desktop_kd0jdv.avif" as="image" type="image/avif" media="(min-width: 1200px)">
 
-    <link rel="preload"href="https://res.cloudinary.com/dnptzisuf/image/upload/fl_progressive,f_auto,q_auto,c_fill,w_auto,dpr_auto,fl_lossy,fl_force_strip/v1747049367/welcome_to_tech_trends_tablet_da4vul.avif" as="image" type="image/avif" media="(min-width: 481px) and (max-width: 1199px)">
+    <link rel="preload"href="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,c_fill,w_auto,dpr_auto,fl_lossy,fl_force_strip/v1747049367/welcome_to_tech_trends_tablet_da4vul.avif" as="image" type="image/avif" media="(min-width: 481px) and (max-width: 1199px)">
 
-    <link rel="preload" href="https://res.cloudinary.com/dnptzisuf/image/upload/f_auto,q_auto,c_fill,w_auto,dpr_auto,fl_lossy,fl_force_strip/v1747049370/welcome_to_tech_trends_mobile_z4ngfo.avif" as="image" type="image/avif" media="(max-width: 480px)">
+    <link rel="preload" href="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,c_fill,w_auto,dpr_auto,fl_lossy,fl_force_strip/v1746786837/welcome_to_tech_trends_mobile_ekfngl.avif" as="image" type="image/avif" media="(max-width: 480px)">
 
     <link
       rel="icon"
@@ -142,17 +142,17 @@
                 <div class="border-white">
                   <picture>
                     <source
-                      srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,c_fill,w_480,dpr_auto,fl_lossy,fl_force_strip/v1747049366/welcome_to_tech_trends_desktop_kd0jdv.avif"
+                      srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,c_fill,w_auto,dpr_auto,fl_lossy,fl_force_strip/v1747049366/welcome_to_tech_trends_desktop_kd0jdv.avif"
                       media="(max-width: 768px)"
                       type="image/avif"
                     />
                     <source
-                      srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,c_fill,w_768,dpr_auto,fl_lossy,fl_force_strip/v1747049367/welcome_to_tech_trends_tablet_da4vul.avif"
+                      srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,c_fill,w_auto,dpr_auto,fl_lossy,fl_force_strip/v1747049367/welcome_to_tech_trends_tablet_da4vul.avif"
                       media="(max-width: 1024px)"
                       type="image/avif"
                     />
                     <img 
-                      src="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,c_fill,w_969,dpr_auto,fl_lossy,fl_force_strip/v1747049370/welcome_to_tech_trends_mobile_z4ngfo.avif"
+                      src="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,c_fill,w_auto,dpr_auto,fl_lossy,fl_force_strip/v1746786837/welcome_to_tech_trends_mobile_ekfngl.avif"
                       alt="Tech Trends Blog Hero Image showcasing a modern, futuristic design with technology visuals and the blog's name, highlighting AI-driven content creation and insights on emerging technology trends"
                       type="image/avif"
                       width="323" 
