--- a/pages/project1.html
+++ b/pages/project1.html
@@ -16,9 +16,9 @@
     />
 
 
-    <link rel="preload" href="https://res.cloudinary.com/dnptzisuf/image/upload/fl_progressive,f_auto,q_auto,c_fill,w_auto,dpr_auto,fl_lossy,fl_force_strip/v1747014137/girlCoding-desktop_qjepoe.avif" as="image" type="image/avif" media="(min-width: 1200px)">
+    <link rel="preload" href="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,c_fill,w_auto,dpr_auto,fl_lossy,fl_force_strip/v1747014137/girlCoding-desktop_qjepoe.avif" as="image" type="image/avif" media="(min-width: 1200px)">
 
-    <link rel="preload"href="https://res.cloudinary.com/dnptzisuf/image/upload/fl_progressive,f_auto,q_auto,c_fill,w_auto,dpr_auto,fl_lossy,fl_force_strip/v1747014135/girlCoding-tablet_uund2i.avif" as="image" type="image/avif" media="(min-width: 481px) and (max-width: 1199px)">
+    <link rel="preload"href="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,c_fill,w_auto,dpr_auto,fl_lossy,fl_force_strip/v1747014135/girlCoding-tablet_uund2i.avif" as="image" type="image/avif" media="(min-width: 481px) and (max-width: 1199px)">
 
     <link rel="preload" href="https://res.cloudinary.com/dnptzisuf/image/upload/f_auto,q_auto,c_fill,w_auto,dpr_auto,fl_lossy,fl_force_strip/v1747014136/girlCoding-mobile_ggxuht.avif" as="image" type="image/avif" media="(max-width: 480px)">
 
