--- a/pages/project1.html
+++ b/pages/project1.html
@@ -7,21 +7,68 @@
     <meta name="description" content="Explore Genny Allison's portfolio showcasing projects that merge creativity and code. From engaging animations to responsive designs, each project highlights her skills in UI/UX, front-end development, and client-focused web solutions. Discover the blend of artistry and functionality across a range of digital creations.">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">    
 
-    <link rel="preload" href="/assets/fonts/PlayfairDisplay/PlayfairDisplay-VariableFont_wght.woff2" as="font" type="font/woff2" crossorigin="anonymous">
+    <link 
+      rel="preload" 
+      href="/assets/fonts/PlayfairDisplay/PlayfairDisplay-VariableFont_wght.woff2"
+      as="font" 
+      type="font/woff2" 
+      crossorigin="anonymous"
+    >
 
-    <link rel="preload" href="/assets/fonts/TT-Norms-Pro-Regular.woff2" as="font" type="font/woff2" crossorigin="anonymous">
+    <link 
+    rel="preload" 
+    href="/assets/fonts/TT-Norms-Pro-Regular.woff2" 
+    as="font" 
+    type="font/woff2" crossorigin="anonymous"
+    >
 
-    <link rel="preload" href="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,f_avif,q_auto,w_auto,c_fill,fl_lossy,fl_force_strip,dpr_auto/v1747014137/girlCoding-desktop_qjepoe.avif" as="image" type="image/avif" media="(min-width: 1200px)">
+    <link 
+      rel="preload" 
+      href="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,w_auto,c_fill,fl_lossy,fl_force_strip,dpr_auto/v1747014137/girlCoding-desktop_qjepoe.avif" 
+      as="image" 
+      type="image/avif" 
+      media="(min-width: 1200px)" 
+    />
 
-    <link rel="preload"href="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,f_avif,q_auto,w_auto,c_fill,fl_lossy,fl_force_strip,dpr_auto/v1747014135/girlCoding-tablet_uund2i.avif" as="image" type="image/avif" media="(min-width: 481px) and (max-width: 1199px)">
+    <link 
+      rel="preload" 
+      href="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,w_auto,c_fill,fl_lossy,fl_force_strip,dpr_auto/v1747014135/girlCoding-tablet_uund2i.avif" 
+      as="image" 
+      type="image/avif" 
+      media="(min-width: 481px) and (max-width: 1199px)" 
+    />
 
-    <link rel="preload" href="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,f_avif,q_auto,w_auto,c_fill,fl_lossy,fl_force_strip,dpr_auto/v1747014136/girlCoding-mobile_ggxuht.avif" as="image" type="image/avif" media="(max-width: 480px)">
+    <link 
+      rel="preload" 
+      href="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,w_auto,c_fill,fl_lossy,fl_force_strip,dpr_auto/v1747014136/girlCoding-mobile_ggxuht.avif" 
+      as="image" 
+      type="image/avif" 
+      media="(max-width: 480px)" 
+    />
 
-    <link rel="preload" href="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,f_avif,q_auto,w_auto,c_fill,fl_lossy,fl_force_strip,dpr_auto/v1747049366/welcome_to_tech_trends_desktop_kd0jdv.avif" as="image" type="image/avif" media="(min-width: 1200px)">
+    <link 
+      rel="preload" 
+      href="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,w_auto,c_fill,fl_lossy,fl_force_strip,dpr_auto/v1747049366/welcome_to_tech_trends_desktop_kd0jdv.avif" 
+      as="image" 
+      type="image/avif" 
+      media="(min-width: 1200px)"
+    />
 
-    <link rel="preload"href="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,f_avif,q_auto,w_auto,c_fill,fl_lossy,fl_force_strip,dpr_auto/v1747049367/welcome_to_tech_trends_tablet_da4vul.avif" as="image" type="image/avif" media="(min-width: 481px) and (max-width: 1199px)">
+    <link 
+      rel="preload" 
+      href="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,w_auto,c_fill,fl_lossy,fl_force_strip,dpr_auto/v1747049367/welcome_to_tech_trends_tablet_da4vul.avif" 
+      as="image" 
+      type="image/avif" 
+      media="(min-width: 481px) and (max-width: 1199px)" 
+    />
 
-    <link rel="preload" href="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,f_avif,q_auto,w_auto,c_fill,fl_lossy,fl_force_strip,dpr_auto/v1746786837/welcome_to_tech_trends_mobile_ekfngl.avif" as="image" type="image/avif" media="(max-width: 480px)">
+    <link 
+      rel="preload" 
+      href="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,w_auto,c_fill,fl_lossy,fl_force_strip,dpr_auto/v1746786837/welcome_to_tech_trends_mobile_ekfngl.avif" 
+      as="image" 
+      type="image/avif" 
+      media="(max-width: 480px)"
+    />
 
     <link
       rel="icon"
@@ -81,9 +128,7 @@
         }
       }
     </script>
-
   </head>
-
   <body>
     <section>
       <div id="nav"></div>
