--- a/pages/project1.html
+++ b/pages/project1.html
@@ -57,7 +57,6 @@
       imagesizes="480px"
     />
 
-
     <link rel="preload" href="/styles/styles-article.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
 
     <link rel="preload" href="/styles/styles-global.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
@@ -120,6 +119,7 @@
       <div id="nav"></div>
       <div class="canvas-skills-grid">
         <picture>
+          <!-- Desktop ≥ 1025px -->
           <source
             srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,c_fill,w_744,h_418/v1742647059/welcome_to_tech_trends_desktop_gxfoz3.avif"
             media="(min-width: 941px)"
