--- a/pages/project1.html
+++ b/pages/project1.html
@@ -17,10 +17,10 @@
     <link
       rel="preload"
       as="image"
-      href="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,c_fill,w_744,h_418/v1742647059/welcome_to_tech_trends_desktop_gxfoz3.avif"
+      href="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,fl_lossy,fl_force_strip,c_fill,g_center,w_744,h_418/v1742647059/welcome_to_tech_trends_desktop_gxfoz3.avif"
       type="image/avif"
       media="(min-width: 941px)"
-      imagesrcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,c_fill,w_744,h_418/v1742647059/welcome_to_tech_trends_desktop_gxfoz3.avif"
+      imagesrcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,fl_lossy,fl_force_strip,c_fill,g_center,w_744,h_418/v1742647059/welcome_to_tech_trends_desktop_gxfoz3.avif"
       imagesizes="744px"
     />
 
@@ -28,10 +28,10 @@
     <link
       rel="preload"
       as="image"
-      href="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,c_fill,w_916,h_515/v1747791270/welcome_to_tech_trends_940_t35mfb.avif"
+      href="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,fl_lossy,fl_force_strip,c_fill,g_center,w_916,h_515/v1747860860/welcome_to_tech_trends_940_bgl09w.avif"
       type="image/avif"
       media="(min-width: 769px) and (max-width: 940px)"
-      imagesrcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,c_fill,w_916,h_515/v1747791270/welcome_to_tech_trends_940_t35mfb.avif"
+      imagesrcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,fl_lossy,fl_force_strip,c_fill,g_center,w_916,h_515/v1747860860/welcome_to_tech_trends_940_bgl09w.avif"
       imagesizes="916px"
     />
 
@@ -39,10 +39,10 @@
     <link
       rel="preload"
       as="image"
-      href="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,c_fill,w_744,h_418/v1746744082/welcome_to_tech_trends_tablet_d9ctvt.avif"
+      href="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,fl_lossy,fl_force_strip,c_fill,g_center,w_744,h_418/v1746744082/welcome_to_tech_trends_tablet_d9ctvt.avif"
       type="image/avif"
       media="(min-width: 481px) and (max-width: 768px)"
-      imagesrcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,c_fill,w_744,h_418/v1746744082/welcome_to_tech_trends_tablet_d9ctvt.avif"
+      imagesrcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,fl_lossy,fl_force_strip,c_fill,g_center,w_744,h_418/v1746744082/welcome_to_tech_trends_tablet_d9ctvt.avif"
       imagesizes="744px"
     />
 
@@ -50,10 +50,10 @@
     <link
       rel="preload"
       as="image"
-      href="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,fl_lossy,fl_force_strip,w_auto,dpr_auto,c_fill,g_auto,w_480,h_270/v1747755941/welcome_to_tech_trends_mobile_c2odp7.avif"
+      href="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,fl_lossy,fl_force_strip,w_480,h_270,c_fill,g_center/v1747860860/welcome_to_tech_trends_mobile_bvstct.avif"
       type="image/avif"
       media="(max-width: 480px)"
-      imagesrcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,fl_lossy,fl_force_strip,w_auto,dpr_auto,c_fill,g_auto,w_480,h_270/v1747755941/welcome_to_tech_trends_mobile_c2odp7.avif"
+      imagesrcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,fl_lossy,fl_force_strip,w_480,h_270,c_fill,g_center/v1747860860/welcome_to_tech_trends_mobile_bvstct.avif"
       imagesizes="480px"
     />
 
@@ -121,33 +121,34 @@
         <picture>
           <!-- Desktop ≥ 1025px -->
           <source
-            srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,c_fill,w_744,h_418/v1742647059/welcome_to_tech_trends_desktop_gxfoz3.avif"
+            srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,fl_lossy,fl_force_strip,c_fill,g_center,w_744,h_418/v1742647059/welcome_to_tech_trends_desktop_gxfoz3.avif"
             media="(min-width: 941px)"
             type="image/avif" />
 
           <!-- Tablet ≥ 769px -->
           <source
-            srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,c_fill,w_916,h_515/v1747791270/welcome_to_tech_trends_940_t35mfb.avif"
+            srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,fl_lossy,fl_force_strip,c_fill,g_center,w_916,h_515/v1747860860/welcome_to_tech_trends_940_bgl09w.avif"
             media="(min-width: 769px) and (max-width: 940px)"
             type="image/avif" />
 
           <!-- Mobile ≤ 768px -->
           <source
-            srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,c_fill,w_744,h_418/v1746744082/welcome_to_tech_trends_tablet_d9ctvt.avif"
+            srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,fl_lossy,fl_force_strip,c_fill,g_center,w_744,h_418/v1746744082/welcome_to_tech_trends_tablet_d9ctvt.avif"
             media="(min-width: 481px) and (max-width: 768px)"
             type="image/avif" />
 
           <!-- Fallback -->
           <img
-            src="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,fl_lossy,fl_force_strip,w_auto,dpr_auto,c_fill,g_auto,w_480,h_270/v1747755941/welcome_to_tech_trends_mobile_c2odp7.avif"
-            alt="Tech Trends Blog Hero Image showcasing a modern, futuristic design with technology vibes"
+            src="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,fl_lossy,fl_force_strip,w_480,h_270,c_fill,g_center/v1747860860/welcome_to_tech_trends_mobile_bvstct.avif"
             width="480"
             height="270"
+            style="object-fit: cover; aspect-ratio: 16 / 9;"
+            alt="Tech Trends Blog Hero Image showcasing a modern, futuristic design with technology vibes"
             fetchpriority="high"
             loading="eager"
             decoding="async"
-            style="object-fit: cover;" 
           />
+
         </picture>
         <div class="canvas-skills-title">
           <h1>a canvas of code:</h1>
