--- a/pages/project1/project1-intro.html
+++ b/pages/project1/project1-intro.html
@@ -145,7 +145,6 @@
         display: flex;
         flex-direction: row;
         align-items: stretch;
-        justify-content: space-between;
         width: 100%;
         max-width: 100vw;
         background-color: #000;
@@ -153,6 +152,7 @@
         box-sizing: border-box;
         padding: 0.5rem;
         min-height: 200px;
+        max-height: 392px;
       }
 
       .canvas-skills-grid picture {
@@ -169,10 +169,10 @@
       .canvas-skills-grid img {
         width: 100%;
         height: auto;
-        object-fit: contain; /* keeps full image visible */
+        object-fit: cover; /* keeps full image visible */
         object-position: center;
         display: block;
-        aspect-ratio: 189 / 200;
+        aspect-ratio: 761 / 376;
         border-top: 1em solid #000;
         border-left: 1em solid #000;
         border-right: 0.5em solid #000;
@@ -202,8 +202,7 @@
         flex-direction: column;
         justify-content: center;
         align-items: center;
-        contain: layout;
-        padding: clamp(0.5rem, 2vw, 1.5rem);
+        height: auto;  
         min-height: 200px;
       }
 
@@ -240,10 +239,11 @@
         .canvas-skills-grid {
           padding: 0.4rem;
           min-height: 240px;
+          max-height: 280px;
         }
 
         .canvas-skills-grid img {
-          aspect-ratio: 189 / 200;
+          aspect-ratio: 404 / 267;
           border-width: 0.5em;
         }
 
@@ -256,7 +256,7 @@
       /* Mobile landscape & phablets: 481px–768px */
       @media (min-width: 481px) and (max-width: 768px) {
         .canvas-skills-grid {
-          min-height: 150px;
+          min-height: 216px;
           padding: 0.3rem;
         }
 
@@ -265,12 +265,12 @@
         }
 
         .canvas-skills-grid img {
-          aspect-ratio: 189 / 135;
+          aspect-ratio: 303 / 216;
           border-width: 0.5em;
         }
 
         .canvas-skills-title {
-          min-height: 135px;
+          min-height: 216px;
           padding: 0.5rem;
           border-width: 0.5em;
         }
@@ -287,7 +287,7 @@
       /* Smallest mobile screens ≤ 480px */
       @media (max-width: 480px) {
         .canvas-skills-grid {
-          min-height: 135px;
+          min-height: 145px;
           padding: 0.25rem;
         }
 
@@ -296,7 +296,7 @@
         }
 
         .canvas-skills-grid img {
-          aspect-ratio: 189 / 145;
+          aspect-ratio: 188 / 145;
           width: 100%;
           height: auto;
           border-width: 0.5em;
